--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,81 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.round {
+  position: absolute;
+  max-width: 600px;
+  max-height: 800px;
+  top: 12%;
+  bottom: 5%;
+  left: 5%;
+  right: 5%;
+  margin: auto;
+  box-shadow: 0px 0px 20px -3px rgba(0,0,0,0.5);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login {
+  position: fixed;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  top: 5px;
+  right: 10px;
+  box-shadow: 0px 0px 20px -3px rgba(0,0,0,0.5);
+  border-radius: 50%;
 }
-
-.App-link {
-  color: #61dafb;
+.logout {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  top: 5px;
+  right: 10px;
+  font-size: 5px;
+  box-shadow: 0px 0px 20px -3px rgba(0,0,0,0.5);
+  border-radius: 50%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.displaylogin {
+  position: fixed;
+  top: 30%;
+  left: 50%;
+  display: flex;
+  font-size: 30px;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 400px;
+  width: 30%;
+  height: 50%;
+  padding-top: 5%;
+  background-color: white;
+  transform: translateX(-50%);
+  box-shadow: 0px 0px 20px -3px rgba(52,61,70,0.5);
+  z-index: 1;
+}
+.logclose {
+  position: absolute;
+  font-size: 40px;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+.tostore {
+  font-size: 15px;
+}
+@media(max-width: 600px) {
+  .displaylogin {
+    min-width: 200px;
+    top: 20%;
+    padding-top: 10%;
+    height: 67%;
+    width: 90%;
   }
 }
